--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 aiogram==2.21
+aioschedule==0.5.2
 aiohttp==3.8.1
 aiosignal==1.2.0
 async-timeout==4.0.2
 asyncpg==0.25.0
+asyncio==3.4.3
 attrs==21.4.0
 Babel==2.9.1
 certifi==2022.6.15
